Update to 1.21 and minor refactoring to update to java 21